# FIRE

./: .gitignore  LICENSE.md  README.md  fire-server.spec  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.claude/: launch.json
docs/: ASSUMPTIONS.md  DESIGN.md  FEATURES.md  MODELING.md
engine/: pyproject.toml
engine/fire_engine/: __init__.py  accounts.py  constants.py  engine.py  metrics.py  sampling.py  scenario.py  social_security.py  taxes.py
engine/fire_engine/data/: historical_annual.csv  limits.json  rmd_table.json  tax_data.json
engine/fire_engine/metrics/: __init__.py  bridge.py  common.py  distributions.py  stress.py  success.py  summary.py  surfaces.py  timeseries.py
engine/fire_engine/scenario/: __init__.py  core.py  enums.py  events.py  expenses.py  health.py  housing.py  income.py  market.py  spending.py
engine/scripts/: build_historical.py  make_icon.py  probe_irs_limits.py  probe_liquidity.py  probe_monotone.py  probe_monotone2.py  probe_sweep.py
engine/tests/: test_accounts.py  test_allocation_schedule.py  test_bracket_fill.py  test_bridge.py  test_distributions.py  test_effective_rate.py  test_engine.py  test_fire_numbers.py  test_frontier.py  test_guardrails.py  test_health.py  test_housing.py  test_income_hsa.py  test_income_streams.py  test_invariants.py  test_liabilities.py  test_medical.py  test_refinements.py  test_sampling.py  test_social_security.py  test_surfaces.py  test_taxes.py  test_validation.py  test_waterfall_schedule.py
scripts/: capture_screenshots.mjs
server/: main.py  test_server.py
(+55 files in other folders)
